--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bank Registration</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -14,22 +15,28 @@
       <input type="date" id="dob" required />
       <input type="tel" id="mobile" placeholder="Mobile Number" required />
       <input type="text" id="residence" placeholder="Residence" required />
+
       <select id="accountType" required>
         <option value="">Select Account Type</option>
         <option value="Savings">Savings</option>
         <option value="Current">Current</option>
       </select>
-      <div>
+
+      <div class="radio-group">
         <label><input type="radio" name="category" value="Individual" checked /> Individual</label>
         <label><input type="radio" name="category" value="Joint" /> Joint</label>
       </div>
+
       <button type="submit">Submit</button>
     </form>
 
+    <input type="tel" id="nextMobile" placeholder="Enter Mobile Number to Continue" />
     <button onclick="goToCustomer()">Enter</button>
+
     <input type="password" id="adminPassword" placeholder="Enter Admin Password" />
     <button onclick="goToAdmin()">Admin</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
