--- a/customer.html
+++ b/customer.html
@@ -3,36 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Customer Panel</title>
+  <title>Customer Dashboard</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h2>Welcome Customer</h2>
+    <h1>Customer Dashboard</h1>
 
     <form id="depositForm">
-      <input type="number" id="depositAmount" placeholder="Amount to Deposit" required />
+      <input type="number" id="depositAmount" placeholder="Enter Deposit Amount" required />
       <button type="submit">Deposit</button>
-      <div id="depositOutput" class="output-box"></div>
+      <p id="depositOutput"></p>
     </form>
 
     <form id="withdrawForm">
-      <input type="number" id="withdrawAmount" placeholder="Amount to Withdraw" required />
+      <input type="number" id="withdrawAmount" placeholder="Enter Withdrawal Amount" required />
       <button type="submit">Withdraw</button>
-      <div id="withdrawOutput" class="output-box"></div>
+      <p id="withdrawOutput"></p>
     </form>
 
     <form id="transferForm">
-      <input type="number" id="transferAmount" placeholder="Amount to Transfer" required />
+      <input type="number" id="transferAmount" placeholder="Enter Transfer Amount" required />
       <button type="submit">Transfer</button>
-      <div id="transferOutput" class="output-box"></div>
+      <p id="transferOutput"></p>
     </form>
 
-    <button id="balanceEnquiryBtn">Check Balance</button>
-    <div id="enquiryOutput" class="output-box"></div>
+    <button id="balanceEnquiryBtn">Balance Enquiry</button>
+    <p id="enquiryOutput"></p>
 
-    <button onclick="goBack()">Back to Home</button>
+    <button id="recentTransactionsBtn">View Recent Transactions</button>
+    <div id="transactionOutput" class="output-box"></div>
+
+    <button onclick="goBack()" class="back-btn">Back to Home</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
