--- a/admin.html
+++ b/admin.html
@@ -5,16 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Portal</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <h1>Admin Portal</h1>
-
     <input type="tel" id="searchMobile" placeholder="Enter Customer Mobile Number" />
 
     <div class="admin-buttons">
-      <button onclick="showProfile()">Account Profile Details</button>
+      <button onclick="showProfile()">Account Profile</button>
       <button onclick="showTransactions()">Recent Transactions</button>
       <button onclick="checkAdminBalance()">Check Balance</button>
     </div>
